syntax = "proto3";

package com.taumaturgo.grpc;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.taumaturgo.grpc";
option java_outer_classname = "ProfilePhotoJobProto";

message JobStatusRequest {
  string job_id = 1;
  // optional wait time to long-poll; 0 returns immediately
  int64 wait_seconds = 2;
}

message JobStatusResponse {
  string job_id = 1;
  string customer_id = 2;
  Status status = 3;
  string original_photo_url = 4;
  string generated_photo_url = 5;
  string error = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message StatusStreamRequest {
  string customer_id = 1;
  // optional filter for a single job
  string job_id = 2;
}

enum Status {
  STATUS_PENDING = 0;
  STATUS_PROCESSING = 1;
  STATUS_DONE = 2;
  STATUS_FAILED = 3;
}

service ProfilePhotoJobGrpc {
  rpc GetStatus(JobStatusRequest) returns (JobStatusResponse);
  rpc StreamStatus(StatusStreamRequest) returns (stream JobStatusResponse);
}
